--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,7 +71,7 @@ add_executable(abuse
     devsel.cpp devsel.h
     crc.cpp crc.h
     gamma.cpp gamma.h
-    id.h netface.h isllist.h sbar.h
+    id.h isllist.h sbar.h
     nfserver.h
     ui/volumewindow.cpp ui/volumewindow.h
     ${abuse_RESOURCE_FILES}
