--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,8 @@ if (WIN32)
     set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY off)
 elseif(APPLE)
     set(CPACK_GENERATOR "DragNDrop;TGZ")
+    set(CPACK_PACKAGING_INSTALL_PREFIX .)
+    set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 else()
     set(CPACK_GENERATOR "TGZ")
 endif()
