--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,8 +87,23 @@ target_link_libraries(abuse lisp)
 target_link_libraries(abuse sdlport)
 target_link_libraries(abuse imlib)
 target_link_libraries(abuse net)
-target_link_libraries(abuse SDL2::SDL2)
-target_link_libraries(abuse SDL2_mixer::SDL2_mixer)
+
+if(EMSCRIPTEN)
+    # Emscripten ports are linked via flags, not CMake targets
+    target_link_options(abuse PRIVATE
+        "SHELL:-sUSE_SDL=2"
+        "SHELL:-sUSE_SDL_MIXER=2"
+        "SHELL:-sSDL2_MIXER_FORMATS=['ogg','mod','wav']"
+    )
+else()
+    # Native or vcpkg builds link to actual imported targets
+    target_link_libraries(abuse
+        PRIVATE
+        SDL2::SDL2
+        SDL2_mixer::SDL2_mixer
+    )
+endif()
+
 if(OPENGL_FOUND)
     target_link_libraries(abuse ${OPENGL_LIBRARIES})
 endif(OPENGL_FOUND)
