--- a/src/lisp/CMakeLists.txt
+++ b/src/lisp/CMakeLists.txt
@@ -12,7 +12,21 @@ include_directories(
 )
 
 
-target_link_libraries(lisp SDL2_mixer::SDL2_mixer)
+if(EMSCRIPTEN)
+    # Emscripten ports are linked via flags, not CMake targets
+    target_link_options(lisp PRIVATE
+        "SHELL:-sUSE_SDL=2"
+        "SHELL:-sUSE_SDL_MIXER=2"
+        "SHELL:-sSDL2_MIXER_FORMATS=['ogg','mod','wav']"
+    )
+else()
+    # Native or vcpkg builds link to actual imported targets
+    target_link_libraries(lisp
+        PRIVATE
+        SDL2::SDL2
+        SDL2_mixer::SDL2_mixer
+    )
+endif()
 
 #INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL2_CFLAGS)
 
