--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -12,7 +12,21 @@ include_directories(
     ${abuse_SOURCE_DIR}/src/imlib
 )
 
-target_link_libraries(net SDL2_mixer::SDL2_mixer)
+if(EMSCRIPTEN)
+    # Emscripten ports are linked via flags, not CMake targets
+    target_link_options(net PRIVATE
+        "SHELL:-sUSE_SDL=2"
+        "SHELL:-sUSE_SDL_MIXER=2"
+        "SHELL:-sSDL2_MIXER_FORMATS=['ogg','mod','wav']"
+    )
+else()
+    # Native or vcpkg builds link to actual imported targets
+    target_link_libraries(net
+        PRIVATE
+        SDL2::SDL2
+        SDL2_mixer::SDL2_mixer
+    )
+endif()
 
 add_definitions(-DNO_CHECK)
 
